cli/tests/snapshot/inputs/errors/no_internals_when_currying.ncl
# capture = 'stderr'
# command = ['eval']
let add : Number -> Number -> Number = fun x y => x + y in
add 1 - 1
